--- a/EDUALERT_FRONTEND-main/app/src/main/res/layout/fragment_admin_home.xml
+++ b/EDUALERT_FRONTEND-main/app/src/main/res/layout/fragment_admin_home.xml
@@ -22,15 +22,14 @@
             android:layout_alignParentStart="true"
             android:layout_marginTop="10dp" />
 
-        <!-- Logo instead of profile -->
-        <ImageView
-            android:id="@+id/appLogo"
+        <!-- Notification Icon instead of Logo -->
+        <include
+            android:id="@+id/notificationIconContainer"
+            layout="@layout/notification_icon_layout"
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/logo"
-            android:scaleType="fitCenter" />
+            android:layout_centerVertical="true" />
     </RelativeLayout>
 
     <View
