tick button ui fix
yet to correct duplication in msg and also navigation issue

--- a/EDUALERT_FRONTEND-main/app/src/main/res/layout/fragment_admineveryone.xml
+++ b/EDUALERT_FRONTEND-main/app/src/main/res/layout/fragment_admineveryone.xml
@@ -107,8 +107,11 @@
                 android:layout_height="140dp"
                 android:layout_columnWeight="1"
                 app:cardCornerRadius="20dp"
+                android:checkable="true"
+                app:checkedIcon="@drawable/ic_check"
                 app:strokeColor="#922381"
                 app:cardBackgroundColor="@android:color/white"
+                android:foreground="?attr/selectableItemBackground"
                 android:layout_margin="8dp">
 
                 <LinearLayout
